<resources>
    <string name="app_name">Memoria</string>
    <string name="signin">Signin</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="google">Google</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_a_account">Already have a account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>